homepage update, setup file structure

--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
-Hello World
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Rajat Singh</title>
+    <meta name="Rajat's Personal Site" content="An Online Resume" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="./assets/css/style.css"
+    />
+  </head>
+  <body class="rs-home-body">
+    <nav class="rs-navbar">
+      <div class="rs-navbar-logo">
+        <img
+          class="rs-navbar-logo-home"
+          src="./assets/images/logo.png"
+          alt="Rajat Singh"
+        />
+      </div>
+      <div class="rs-navbar-menu">
+        <button class="rs-navbar-button">Home</button>
+        <button class="rs-navbar-button">Academics</button>
+        <button class="rs-navbar-button">Experience</button>
+        <button class="rs-navbar-button">Contact</button>
+      </div>
+    </nav>
+    <div class="rs-home-greeting">
+      <div class="rs-home-greeting-message">
+        <div class="rs-hmsg-main">
+          Hi there! Raj Here!<br />
+          I'm Software Developer<br />
+        </div>
+        <div class="rs-hmsg-fine">What's your superpower?</div>
+      </div>
+      <div class="rs-home-greeting-code">
+        me = person()<br />
+        while(me.awake()): <br />
+        &nbsp;&nbsp;&nbsp;me code()
+      </div>
+    </div>
+  </body>
+</html>
