--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="utf-8" />
     <title>Rajat Singh</title>
     <meta name="Rajat's Personal Site" content="An Online Resume" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
+    />
     <link
       rel="stylesheet"
       type="text/css"
