added other pages, minor css fixes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="./assets/css/style.css"
     />
   </head>
-  <body class="rs-home-body">
+  <body class="rs-home-backdrop rs-max-height">
     <nav class="rs-navbar">
       <div class="rs-navbar-logo">
         <img
@@ -25,17 +25,17 @@
         />
       </div>
       <div class="rs-navbar-menu">
-        <button class="rs-navbar-button">Home</button>
-        <button class="rs-navbar-button">Academics</button>
-        <button class="rs-navbar-button">Experience</button>
-        <button class="rs-navbar-button">Contact</button>
+        <a href="index.html" class="rs-navbar-button">Home</a>
+        <a href="/pages/academics.html" class="rs-navbar-button">Academics</a>
+        <a href="/pages/experience.html" class="rs-navbar-button">Experience</a>
+        <a href="/pages/contact.html" class="rs-navbar-button">Contact</a>
       </div>
     </nav>
     <div class="rs-home-greeting">
       <div class="rs-home-greeting-message">
         <div class="rs-hmsg-main">
           Hi there! Raj Here!<br />
-          I'm Software Developer<br />
+          I'm a Software Developer<br />
         </div>
         <div class="rs-hmsg-fine">What's your superpower?</div>
       </div>
