--- a/pages/experience.html
+++ b/pages/experience.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>RS - Contact</title>
+    <title>RS - Work Experience</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
@@ -29,7 +29,7 @@
         <a href="experience.html" class="rs-navbar-button">Experience</a>
         <a href="contact.html" class="rs-navbar-button">Contact</a>
       </div>
-      <div class="rs-navbar-title">Contact Info</div>
+      <div class="rs-navbar-title">Work Experience</div>
     </nav>
     <div></div>
   </body>
