mobile css fixes, header changes

--- a/index.html
+++ b/index.html
@@ -35,14 +35,9 @@
       <div class="rs-home-greeting-message">
         <div class="rs-hmsg-main">
           Hi there! Raj Here!<br />
-          I'm a Software Developer<br />
+          I'm a Software Developer.<br />
         </div>
         <div class="rs-hmsg-fine">What's your superpower?</div>
-      </div>
-      <div class="rs-home-greeting-code">
-        me = person()<br />
-        while(me.awake()): <br />
-        &nbsp;&nbsp;&nbsp;me code()
       </div>
     </div>
   </body>
