minor updates to contact

--- a/pages/academics.html
+++ b/pages/academics.html
@@ -25,12 +25,14 @@
       </div>
       <div class="rs-navbar-menu">
         <a href="../index.html" class="rs-navbar-button">Home</a>
-        <a href="academics.html" class="rs-navbar-button">Academics</a>
+        <a href="academics.html" class="rs-navbar-button rs-button-selected"
+          >Academics</a
+        >
         <a href="experience.html" class="rs-navbar-button">Experience</a>
         <a href="contact.html" class="rs-navbar-button">Contact</a>
       </div>
       <div class="rs-navbar-title">Academic Portfolio</div>
     </nav>
-    <div></div>
+    <div>Academics go here!</div>
   </body>
 </html>
