--- a/pages/contact.html
+++ b/pages/contact.html
@@ -14,8 +14,8 @@
       href="../assets/css/style.css"
     />
   </head>
-  <body>
-    <nav class="rs-navbar rs-navbar-education">
+  <body class="rs-navbar-contact">
+    <nav class="rs-navbar ">
       <div class="rs-navbar-logo">
         <img
           class="rs-navbar-logo-home"
@@ -27,10 +27,11 @@
         <a href="../index.html" class="rs-navbar-button">Home</a>
         <a href="academics.html" class="rs-navbar-button">Academics</a>
         <a href="experience.html" class="rs-navbar-button">Experience</a>
-        <a href="contact.html" class="rs-navbar-button">Contact</a>
+        <a href="contact.html" class="rs-navbar-button rs-button-selected"
+          >Contact</a
+        >
       </div>
-      <div class="rs-navbar-title">Contact Me</div>
     </nav>
-    <div></div>
+    <div>Contact details go here!</div>
   </body>
 </html>
