--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         />
       </div>
       <div class="rs-navbar-menu">
-        <a href="index.html" class="rs-navbar-button">Home</a>
+        <a href="index.html" class="rs-navbar-button rs-button-selected"
+          >Home</a
+        >
         <a href="/pages/academics.html" class="rs-navbar-button">Academics</a>
         <a href="/pages/experience.html" class="rs-navbar-button">Experience</a>
         <a href="/pages/contact.html" class="rs-navbar-button">Contact</a>
