--- a/pages/experience.html
+++ b/pages/experience.html
@@ -15,7 +15,7 @@
     />
   </head>
   <body>
-    <nav class="rs-navbar rs-navbar-education">
+    <nav class="rs-navbar rs-navbar-experience">
       <div class="rs-navbar-logo">
         <img
           class="rs-navbar-logo-home"
@@ -26,7 +26,9 @@
       <div class="rs-navbar-menu">
         <a href="../index.html" class="rs-navbar-button">Home</a>
         <a href="academics.html" class="rs-navbar-button">Academics</a>
-        <a href="experience.html" class="rs-navbar-button">Experience</a>
+        <a href="experience.html" class="rs-navbar-button rs-button-selected"
+          >Experience</a
+        >
         <a href="contact.html" class="rs-navbar-button">Contact</a>
       </div>
       <div class="rs-navbar-title">Experience</div>
