completed contact page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="/pages/contact.html" class="rs-navbar-button">Contact</a>
       </div>
     </nav>
-    <div class="rs-home-greeting">
+    <div class="rs-absolute-center">
       <div class="rs-home-greeting-message">
         <div class="rs-hmsg-main">
           Hi there! Raj Here!<br />
