--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,6 +32,31 @@
         >
       </div>
     </nav>
-    <div>Contact details go here!</div>
+    <div class="rs-contact-content rs-absolute-center">
+      <div class="rs-contact-details">
+        <div>
+          <a href="https://github.com/rajatsnvsingh">
+            <img
+              class="rs-contact-img"
+              src="../assets/images/contact-github.jpg"
+              alt="https://github.com/rajatsnvsingh"
+          /></a>
+          <a class="rs-contact-img" href="https://www.linkedin.com/in/rajatsnv/"
+            ><img
+              class="rs-contact-img"
+              src="../assets/images/contact-linkedIn.png"
+              alt="https://www.linkedin.com/in/rajatsnv/"
+          /></a>
+
+          <h2 class="rs-contact-email">Rajat.Singh@ucalgary.ca</h2>
+        </div>
+        <div>From Calgary, AB, Canada</div>
+      </div>
+      <div class="rs-contact-resume">
+        <a href="../assets/RS_Resume.pdf" class="rs-contact-resume-link"
+          >Download Resume</a
+        >
+      </div>
+    </div>
   </body>
 </html>
