completed experience page interim of assignment

--- a/pages/academics.html
+++ b/pages/academics.html
@@ -14,7 +14,7 @@
       href="../assets/css/style.css"
     />
   </head>
-  <body>
+  <body id="rs-content-body">
     <nav class="rs-navbar rs-navbar-education">
       <div class="rs-navbar-logo">
         <img
@@ -33,7 +33,7 @@
       </div>
       <div class="rs-navbar-title">Academic Portfolio</div>
     </nav>
-    <div class="rs-academics-content">
+    <div class="rs-center-content">
       <h1>Education</h1>
       <div class="rs-academics-education-containter">
         <div class="rs-academics-education-content">
@@ -49,65 +49,62 @@
         />
       </div>
       <h1>Honors & Awards</h1>
-      <div>
-        <div style="overflow-x:auto;">
-          <table>
-            <tr>
-              <th>Name</th>
-              <th>Date</th>
-              <th>Institution</th>
-            </tr>
+      <div class="rs-academic-table">
+        <table>
+          <tr>
+            <th>Name</th>
+            <th>Date</th>
+            <th>Institution</th>
+          </tr>
 
-            <tr>
-              <td>Competitive Undergraduate Scholarship</td>
-              <td>2015, 2016, 2018</td>
-              <td>University of Calgary</td>
-            </tr>
-            <tr>
-              <td>Dean's List</td>
-              <td>2014, 2016</td>
-              <td>University of Calgary</td>
-            </tr>
-            <tr>
-              <td>Presidential Entrance Scholarship</td>
-              <td>2014</td>
-              <td>University of Calgary</td>
-            </tr>
-            <tr>
-              <td>Excellent Student Admission Scholarship (Offer)</td>
-              <td>2014</td>
-              <td>University of Alberta</td>
-            </tr>
-            <tr>
-              <td>
-                Outstanding Internation Student (OIS) Admission Scholarship
-                (Offer)
-              </td>
-              <td>2014</td>
-              <td>University of British Columbia</td>
-            </tr>
-            <tr>
-              <td>
-                Principal's Honor Roll
-              </td>
-              <td>2014</td>
-              <td>ISB High School</td>
-            </tr>
-          </table>
-        </div>
+          <tr>
+            <td>Competitive Undergraduate Scholarship</td>
+            <td>2015, 2016, 2018</td>
+            <td>University of Calgary</td>
+          </tr>
+          <tr>
+            <td>Dean's List</td>
+            <td>2014, 2016</td>
+            <td>University of Calgary</td>
+          </tr>
+          <tr>
+            <td>Presidential Entrance Scholarship</td>
+            <td>2014</td>
+            <td>University of Calgary</td>
+          </tr>
+          <tr>
+            <td>Excellent Student Admission Scholarship (Offer)</td>
+            <td>2014</td>
+            <td>University of Alberta</td>
+          </tr>
+          <tr>
+            <td>
+              Outstanding Student (OIS) Admission Scholarship (Offer)
+            </td>
+            <td>2014</td>
+            <td>University of British Columbia</td>
+          </tr>
+          <tr>
+            <td>
+              Principal's Honor Roll
+            </td>
+            <td>2014</td>
+            <td>ISB High School</td>
+          </tr>
+        </table>
       </div>
       <h1>Relevant Courses</h1>
       <div>
         <div class="rs-academics-list">
           <h2>Engineering</h2>
           <ul>
-            <li>ENGG 233 : Computing for Engineer (2014)</li>
+            <li>ENGG 233 : Computing for Engineers (2014)</li>
             <li>ENCM 339: Programming Fundamentals (2015)</li>
             <li>ENCM 369: Computer Organization (2016)</li>
             <li>ENSF 409: Principles of Software Development (2016)</li>
             <li>ENCM 511: Embedded Systems Interfacing (2016)</li>
             <li>SENG 301: Software Analysis and Design (2015)</li>
-            <li>SENG 401: Large Scale Software (2017)</li>
+            <li>SENG 401: Software Architecture(2017)</li>
             <li>SENG 403: Software Development in Teams & Org (2017)</li>
             <li>SENG 437: Software Testing (2017)</li>
             <li>SENG 471: Software Requirements Engineering (2017)</li>
@@ -122,7 +119,7 @@
           <h2>Computer Science</h2>
           <ul>
             <li>CPSC 319: Data Structures and Algorithms (2016)</li>
-            <li>CPSC 457: Principals of Operating Systems (2016)</li>
+            <li>CPSC 457: Principles of Operating Systems (2016)</li>
             <li>CPSC 471: Database Management Systems (2016)</li>
             <li>CPSC 441: Computer Networks (2017)</li>
             <li>CPSC 481: Human Computer Interaction (2018)</li>
