--- a/pages/experience.html
+++ b/pages/experience.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>RS - Academic Portfolio</title>
+    <title>RS - Experience Portfolio</title>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
@@ -14,7 +14,7 @@
       href="../assets/css/style.css"
     />
   </head>
-  <body>
+  <body id="rs-content-body">
     <nav class="rs-navbar rs-navbar-experience">
       <div class="rs-navbar-logo">
         <img
@@ -31,8 +31,210 @@
         >
         <a href="contact.html" class="rs-navbar-button">Contact</a>
       </div>
-      <div class="rs-navbar-title">Experience</div>
+      <div class="rs-navbar-title">Experience Portfolio</div>
     </nav>
-    <div></div>
+    <div class="rs-center-content">
+      <h1 class="rs-bottom-margin-zero">Skills</h1>
+      <div class="rs-skill-legend rs-skill-tag-set">
+        <div class="rs-skill-proficient">Proficient</div>
+        <div class="rs-skill-intermediate">Internmediate</div>
+        <div class="rs-skill-introductory">Introductory</div>
+      </div>
+      <div class="rs-skill-container">
+        <div class="rs-skill-section">
+          <div class="rs-skill-tag-title">Languages:</div>
+          <div class="rs-skill-tag-set">
+            <div class="rs-skill-proficient">C#</div>
+            <div class="rs-skill-intermediate">Java</div>
+            <div class="rs-skill-proficient">HTML/CSS</div>
+            <div class="rs-skill-proficient">JavaScript</div>
+            <div class="rs-skill-introductory">Python</div>
+            <div class="rs-skill-intermediate">SQL</div>
+            <div class="rs-skill-introductory">C++</div>
+          </div>
+        </div>
+        <div class="rs-skill-section">
+          <div class="rs-skill-tag-title">Frameworks:</div>
+          <div class="rs-skill-tag-set">
+            <div class="rs-skill-proficient">ASP.NET</div>
+            <div class="rs-skill-proficient">AngularJS</div>
+            <div class="rs-skill-intermediate">Angular</div>
+            <div class="rs-skill-intermediate">React</div>
+            <div class="rs-skill-introductory">Node.js</div>
+          </div>
+        </div>
+        <div class="rs-skill-section">
+          <div class="rs-skill-tag-title">Random:</div>
+          <div class="rs-skill-tag-set">
+            <div class="rs-skill-intermediate">Linux</div>
+            <div class="rs-skill-intermediate">Physics</div>
+            <div class="rs-skill-proficient">Azure</div>
+            <div class="rs-skill-intermediate">Entity Framework</div>
+            <div class="rs-skill-proficient">Elegant Code</div>
+            <div class="rs-skill-proficient">UI Design</div>
+            <div class="rs-skill-proficient">TDD Principles</div>
+            <div class="rs-skill-proficient">OOO Programming</div>
+            <div class="rs-skill-proficient">Table Tennis</div>
+          </div>
+        </div>
+      </div>
+
+      <h1>Work Experience</h1>
+      <div>
+        <div class="rs-experience-card-date">Sept 2017 - August 2018</div>
+        <div class="rs-experience-card">
+          <div class="rs-experience-card-content rs-inline-block">
+            <h2>Global IT Application Analyst</h2>
+            <h3>Exxonmobil, Imperial Oil HQ, Calgary</h3>
+            <p>
+              Worked on a global IT team responsible for supporting and
+              enhancing timekeeping, manufacturing and corporate applications.
+            </p>
+            <ul>
+              <li>
+                Provided operational supported for multiple applications to
+                various sites and business lines.
+              </li>
+              <li>
+                Worked on application enhancement, end-of-life and upgrade
+                projects.
+              </li>
+              <li>
+                Followed appropriate change management processes for moving
+                changes between environments.
+              </li>
+              <li>
+                Developed full-stack web applications using cloud infrastructure
+                and latest development frameworks, authentication, version
+                control, unit testing and CICD (continuous integration and
+                deployment) pipelines.
+              </li>
+              <li>
+                Followed a complete agile framework for work prioritization and
+                management.
+              </li>
+              <li>
+                Collaborated with other team members to plan, design and
+                implement solutions based on provided requirements.
+              </li>
+              <li>
+                Interfaced with business lines, vendors, developers and various
+                other IT teams to troubleshoot and find effective solutions to
+                the problem at hand.
+              </li>
+            </ul>
+          </div>
+          <div class="rs-experience-card-img-contrainer">
+            <img
+              class="rs-experience-card-img"
+              src="../assets/images/exxonmobil-logo-png-transparent.png"
+              alt="Exxonmobil"
+            />
+          </div>
+        </div>
+      </div>
+      <h1>Projects</h1>
+      <div title="RRQ Rental">
+        <div class="rs-experience-card-date">Fall 2016</div>
+        <div class="rs-experience-card">
+          <div class="rs-experience-card-content rs-inline-block">
+            <h2>RRQ Rental Solutions</h2>
+            <h3>CPSC 471</h3>
+            <ul>
+              <li>
+                Designed a complete database based on the problem description.
+              </li>
+              <li>
+                Developed an interactive web app as a companion to the database.
+              </li>
+              <li>Implemented a complete login system with session guards.</li>
+              <li>Wrote a concise and professional user manual.</li>
+              <li>Technologies Used: PHP, SQL, HTML, CSS, and JavaScript</li>
+            </ul>
+          </div>
+          <div class="rs-experience-card-img-contrainer">
+            <img
+              class="rs-experience-card-img"
+              src="../assets/images/rrq-rentals.jpg"
+              alt="Exxonmobil"
+            />
+          </div>
+        </div>
+      </div>
+      <div>
+        <div class="rs-experience-card-date">Fall 2016</div>
+        <div class="rs-experience-card">
+          <div class="rs-experience-card-content rs-inline-block">
+            <h2>Embedded System and Signal Processing</h2>
+            <h3>ENCM 511</h3>
+            <ul>
+              <li>
+                Developed and optimized code in C and Assembly for the Blackfin
+                ASDP553 Processor.
+              </li>
+              <li>
+                Worked with pseudo-multithreaded applications and simulators
+                with focus on testing.
+              </li>
+              <li>
+                Data retrieval from thermal sensors, detecting button press
+                durations.
+              </li>
+              <li>Worked with GPIO and SPI interfacing.</li>
+              <li>Designed programs based on a loop OS and FSMs</li>
+            </ul>
+          </div>
+          <div class="rs-experience-card-img-contrainer">
+            <img
+              class="rs-experience-card-img"
+              src="../assets/images/embeded-systems.jpg"
+              alt="Exxonmobil"
+            />
+          </div>
+        </div>
+      </div>
+      <div title="Multi-Platform Alarm Clock">
+        <div class="rs-experience-card-date">Fall 2017</div>
+        <div class="rs-experience-card">
+          <div class="rs-experience-card-content rs-inline-block">
+            <h2>Multi-Platform Alarm Clock</h2>
+            <h3>SENG 403</h3>
+            <ul>
+              <li>
+                Worked in a team of 6 developers and followed the agile
+                methodology.
+              </li>
+              <li>
+                Extensively used version control (Git) and engaged in pair
+                programming.
+              </li>
+              <li>Prototyped and implemented intuitive UIs.</li>
+              <li>
+                Developed a Windows Desktop (WPF) and Windows Mobile (UWP)
+                solution.
+              </li>
+              <li>
+                Participated in daily stand-ups and followed a strict periodic
+                release schedule.
+              </li>
+            </ul>
+          </div>
+          <div class="rs-experience-card-img-contrainer">
+            <img
+              class="rs-experience-card-img"
+              src="../assets/images/alarm-clock.jpg"
+              alt="Exxonmobil"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
+  <div id="footer">
+    <p>
+      Computers themselves, and software yet to be developed, will revolutionize
+      the way we learn and live. <br />
+      -Steve Jobs
+    </p>
+  </div>
 </html>
