updated home page message

--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
     <div class="rs-absolute-center">
       <div class="rs-home-greeting-message">
         <div class="rs-hmsg-main">
-          Hi there! Raj Here!<br />
-          I'm a Software Developer.<br />
+          Hi there!<br />
+          I'm Raj, a software engineering student.<br />
         </div>
-        <div class="rs-hmsg-fine">What's your superpower?</div>
+        <div class="rs-hmsg-fine">
+          I love designing and building software, I strive to create simple and
+          elegant solutions to complex problems. <br />
+          I'm passionate about learning new technologies and am a great team
+          player, dedicated to creating a positive work environment and
+          streamlining processes.
+        </div>
       </div>
     </div>
   </body>
