--- a/pages/experience.html
+++ b/pages/experience.html
@@ -34,7 +34,7 @@
       <div class="rs-navbar-title">Experience Portfolio</div>
     </nav>
     <div class="rs-center-content">
-      <h1 class="rs-bottom-margin-zero">Skills</h1>
+      <h1 class="rs-skill-container-title">Skills</h1>
       <div class="rs-skill-legend rs-skill-tag-set">
         <div class="rs-skill-proficient">Proficient</div>
         <div class="rs-skill-intermediate">Internmediate</div>
