minor tweaks and long string handling

--- a/assignments/calc.html
+++ b/assignments/calc.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>Raj's Calculator</title>
+    <title>SENG 513 Calculator</title>
     <meta name="description" content="A Pretty Cool Calculator" />
     <meta name="author" content="Rajat Singh" />
     <meta
@@ -18,7 +18,7 @@
   <body>
     <div id="calculator">
       <div id="display">
-        <h1>The Raj Calculator</h1>
+        <h1>SENG 513 Calculator</h1>
         <div id="expression">
           <a id="expression-text"></a>
         </div>
